fix: popup layer z-index

--- a/src/_package/styles.scss
+++ b/src/_package/styles.scss
@@ -23,6 +23,16 @@
     }
   }
 
+  &-layer {
+    position: fixed;
+    inset: 0;
+    visibility: hidden;
+
+    &--active {
+      visibility: visible;
+    }
+  }
+
   &-backdrop {
     position: fixed;
     inset: 0;
